# agent-keep

./: .gitignore  README.md  STATUS.md  chassis-successor-brief.md  deploy.sh  pyproject.toml
.githooks/: pre-push
.verity/: identity.json
contracts/: agent-spec.md  audit-record.md  egress-observation.md  internal-message.md  log-egress.md  run-lifecycle.md
deploy/: agent-keep-deploy  agent.env.template.example  default-chatbot.env.template  ingress-forward.py  sudoers-agent-keep
docs/: blueprint-data.json  deployment-abstraction-skeleton.md  provisioner-skeleton.md  spec-reference.md  spec-schema.json  walking-skeleton.md
examples/: client-tracking.yaml  outage-correlation.yaml  skeleton.yaml
feature-assessments/: aws-provisioner-assessment.md  backlog-hardening-assessment.md  deployment-abstraction-assessment.md  reject-empty-secret-lines-assessment.md  walking-skeleton-assessment.md
scripts/: assert-proxy-running.sh  bootstrap-host.sh  deliver-worker-image.sh  deploy-agent.sh  lint.sh  smoke-chat.sh  smoke-egress.sh  smoke-mechanic.sh
specs/: default-chatbot.live.yaml  default-chatbot.ollama.yaml  default-chatbot.openai.yaml  default-chatbot.yaml  mechanic.yaml
stage-instructions/: stage-1-transplant-the-core-agent-runtime-keep-spec-hermetic-ci-green.md  stage-10-openai-provider-cloud-adapter-additive-schema-deployable-varian.md  stage-11-publish-the-anthropic-worker-variant-anthropic-edge-unify-provi.md  stage-12-forward-all-provider-key-env-vars-to-the-worker-fix-openai-goog.md  stage-13-host-bootstrap-any-fresh-ubuntu-docker-host-to-deploy-ready.md  (+19 more)
(+41 files in other folders)
